project(glmock)

cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_COMPILER "clang++")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++11")

if (NOT GTEST_FOUND)
    find_package(GTEST REQUIRED)
endif()
if (NOT GMOCK_FOUND)
    find_package(GMOCK REQUIRED)
endif()
if (NOT GLEW_FOUND)
    find_package(GLEW REQUIRED)
endif()

include_directories(SYSTEM ${GTEST_INCLUDE_DIRS})
include_directories(SYSTEM ${GMOCK_INCLUDE_DIRS})
include_directories(SYSTEM ${GLEW_INCLUDE_DIRS})
add_library(glmock SHARED glmock.cpp)
